syntax = "proto3";

option java_multiple_files = true;
option java_package = "itx.examples.grpc.service";
option java_outer_classname = "SimpleServiceProto";
option objc_class_prefix = "HLW";

service Greeter {

    // sayHello scenario
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    // getDataSync scenario
    rpc GetData (DataMessage) returns (DataMessage) {}

    // getDataAsync scenario
    rpc DataChannel (stream DataMessage) returns (stream DataMessage) {}

    // getBulkData scenario
    rpc GetBulkData (DataMessages) returns (DataMessages) {}

    // getBulkDataAsync scenario
    rpc BulkDataChannel (stream DataMessages) returns (stream DataMessages) {}

}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

message DataMessage {
    uint64 index = 1;
    string message = 2;
}

message DataMessages {
    repeated DataMessage messages = 1;
}
